Trying to prevent long press on mobile

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 .controls button>img {
   height: 30px;
   width: 30px;
+  pointer-events: none;
 }
 .controls .bt-up>img {
   transform: rotateZ(90deg);
